kubernetes/overlays/jwels.berlin/client-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client
  namespace: archive
spec:
  tls:
  - hosts:
    - archive.jwels.berlin
    secretName: archive-tls
  rules:
  - host: archive.jwels.berlin
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client
            port:
              number: 80
